[package]
name = "any-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base-infra = { workspace = true, features = ["tokio"] }

anyhow = { workspace = true }
tracing = { workspace = true }
alloy-primitives.workspace = true
bigdecimal.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
move-core-types.workspace = true
