[package]
name = "chain-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base-infra = { workspace = true }

anyhow.workspace = true
tracing.workspace = true

# endless
move-core-types.workspace = true


[features]
endless = []