[package]
name = "endless-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base-infra = { workspace = true }

anyhow.workspace = true
tracing.workspace = true
endless-sdk.workspace = true
bcs.workspace = true
serde.workspace = true
moka = { workspace = true, features = ["future", "sync"] }
hex.workspace = true
url.workspace = true
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
